crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__file_not_found.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: result.unwrap_err()
snapshot_kind: text
---
File not found at path: nonexistent.txt
