crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_advanced-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content1
snapshot_kind: text
---
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) throw new Error('User not found');
    return user;
  }
}
