crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_advanced-4.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content2
snapshot_kind: text
---
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) {
      throw new UserNotFoundError(id);
    }
    return this.sanitizeUser(user);
  }
}
