crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_advanced.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: normalize_path(&result)
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) throw new Error('User not found');
    return user;
  }
}
</file_content>
