crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_replace-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content1
snapshot_kind: text
---
function calculateTotal(items) {
  let total = 0;
  for (const item of items) {
    total += item.price * item.quantity;
  }
  return total;
}
