crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__fuzzy_search_replace-4.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content2
snapshot_kind: text
---
function computeTotal(items, tax = 0) {
  let total = 0.0;
  for (const item of items) {
    total += item.price * item.quantity;
  }
  return total;
}
