crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__invalid_rust_replace-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content
snapshot_kind: text
---
fn main() { let x =
