crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__multiple_blocks-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: final_content
snapshot_kind: text
---
    New First    
  Middle Line  
    New Last
